// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "ctx": "context",
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "route": "/base/test",
      "type": "get",
    },
    "interceptors": [],
    "name": "A",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "header": {},
    "http": {
      "route": "/B/testB",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "route": "/B/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "header": {},
    "http": {
      "route": "/B/testB",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "route": "/B/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test3",
    "guards": [],
    "header": {},
    "http": {
      "route": "/C/testC",
      "type": "get",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
  {
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "route": "/C/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
]
`;
